# prospecting_bot

./: .gitignore  main.py  pyproject.toml  requirements.txt
configs/: company_requirements.yml  job_qualification.yml  lead_extraction.yml
modules/: company_info_extractor.py  company_info_qualifier.py  jd_qualifier.py  lead_info_extractor.py  schema.py
